--- a/Day1/Group_activity_study_design.Rmd
+++ b/Day1/Group_activity_study_design.Rmd
@@ -36,7 +36,7 @@ Our colleagues has been setting up an extensive breeding program, but we would l
 
 ## Scenario 3
 
-After hundreds of years, we would like to finally give a scientific support to the old belief that "An apple a day keeps the doctor away". Metabolomics could definitively help, both in the characterization of the apples and in their effects on humans ...
+After hundreds of years, we would like to finally give a scientific support to the old belief that "An apple a day keeps the doctor away". Metabolomics could definitively help, both in the characterization of the apples and in understanding their effects on humans ...
 
 
 
